fix navbar alignment

--- a/style.css
+++ b/style.css
@@ -145,7 +145,6 @@ a:hover {
 
 .navbar-nav {
     margin-top: 60px;
-    margin-left: -15px;
 }
 
 .affix {
